# clinical-cohort-mapper

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  Problem_statement.md  README.md  SECURITY.md  WRITEUP.md  app.py  docker-compose.yml  pyproject.toml  results.json  run.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data/: img-a0dc2531-7e0b-4f86-a848-7e5d9610403b  local_vocab.db
docs/: api.md  architecture.md  evaluation.md  observability.md  scalability.md
mapper/: auditor.py  db.py  engine.py  llm.py  parser.py  retriever.py  schemas.py  telemetry.py
observability/grafana/dashboards/: clinical_cohort_mapper.json
observability/grafana/provisioning/dashboards/: provider.yaml
observability/grafana/provisioning/datasources/: tempo.yaml
observability/tempo/: tempo.yaml
tests/: test_a2a.py  test_mapper.py
